# aliyun-oss-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
src/: common.rs  error.rs  lib.rs  request.rs  send.rs  sign.rs
src/bucket/: del_bucket.rs  del_objects.rs  del_objects_onversion.rs  get_bucket_info.rs  get_bucket_stat.rs  list_multipart_uploads.rs  list_objects.rs  mod.rs  oss_bucket.rs  put_bucket.rs
src/client/: describe_regions.rs  list_buckets.rs  mod.rs  oss_client.rs
src/object/: append_object.rs  copy_object.rs  del_object.rs  del_object_tagging.rs  get_object.rs  get_object_acl.rs  get_object_meta.rs  get_object_tagging.rs  get_object_url.rs  get_symlink.rs  get_url.rs  head_object.rs  list_object_versions.rs  mod.rs  multipart_abort_upload.rs  multipart_complete_upload.rs  multipart_copyto_part.rs  multipart_init_upload.rs  multipart_list_parts.rs  multipart_upload_part.rs  oss_object.rs  put_object.rs  put_object_acl.rs  put_object_tagging.rs  put_symlink.rs  restore_object.rs
