[package]
name = "aliyun-oss-rs"
version = "0.0.2"
edition = "2021"
authors = ["Ethan Archer"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/EthanWinton/aliyun-oss-rs"
description = "A non-official Rust SDK implementation for Alibaba Cloud OSS."

[dependencies]
base64 = "0.21.2"
chrono = "0.4.25"
futures-util = { version = "=0.3.28", default-features = false }
infer = "0.13.0"
mime_guess = "2.0.4"
percent-encoding = "2.2.0"
reqwest = {version = "0.11.18",default-features = false,features = ["stream","rustls-tls"]}
ring = "0.16.20"
serde = "1.0.163"
serde-xml-rs = "0.6.0"
serde_derive = "1.0.163"
thiserror = "1.0.40"
tokio =  "1.28.2"
tokio-util = {version = "0.7.8",features = ["io"]}
